# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
hooks/: code_coverage.py  integration_test.py  pmd.py  snyk.py  spotbugs.py  spotless.py  unit_test.py
