[metadata]
name = pre-commit-hooks

[options]
packages = find:
install_requires =
    beautifulsoup4==4.9.3
python_requires = >=3.7

[options.entry_points]
console_scripts =
    code-coverage = hooks.code_coverage:main
    snyk-test = hooks.snyk_test:main
    pmd = hooks.pmd:main
    spotbugs = hooks.spotbugs:main
    spotless = hooks.spotless:main
    unit-test = hooks.unit_test:main
    integration-test = hooks.integration_test:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true